--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,16 @@
         {% block head %}
             <title> {% block title %} {% endblock %}</title>
             <link rel="stylesheet" href="../static/base.css">
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         {% endblock %}
     </head>
     <body>
         <!-- todo headers here -->
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a href="#"></a>
+            </div>
+        </nav>
         {% block content %} {% endblock %}
     </body>
 </html>
