--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,9 @@
         <!-- todo headers here -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a href="#"></a>
+                <a class="navbar-brand" href="#">
+                    <!-- put img here -->
+                </a>
             </div>
         </nav>
         {% block content %} {% endblock %}
