--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,13 @@
                 <a class="navbar-brand" href="#">
                     <!-- put img here -->
                 </a>
+                <h2 class="navbar-text">
+                    BO JIO AH?
+                </h2>
+                <a class="navbar-brand" href="#">
+                    LOGIN
+                    <!-- profile pic here -->
+                </a>
             </div>
         </nav>
         {% block content %} {% endblock %}
