--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,8 @@
         <!-- todo headers here -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <!-- put img here -->
+                <a class="navbar-brand" href="{{url_for('root')}}">
+                    <img src="../static/images/logo.png" alt="logo" height="75">
                 </a>
                 <h2 class="navbar-text">
                     BO JIO AH?
