--- a/templates/base.html
+++ b/templates/base.html
@@ -3,16 +3,17 @@
     <head>
         {% block head %}
             <title> {% block title %} {% endblock %}</title>
+            <link rel="icon" href="../static/images/Favicon-32x32.jpeg">
             <link rel="stylesheet" href="../static/base.css">
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         {% endblock %}
     </head>
     <body>
         <!-- todo headers here -->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary" id="navbar">
+            <div class="container-fluid" id="main-header">
                 <a class="navbar-brand" href="{{url_for('root')}}">
-                    <img src="../static/images/logo.png" alt="logo" height="75">
+                    <img src="../static/images/main-logo.png" alt="logo" height="125">
                 </a>
                 <h2 class="navbar-text">
                     BO JIO AH?
