--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
                 <h2 class="navbar-text">
                     BO JIO AH?
                 </h2>
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="{{url_for('login')}}">
                     LOGIN
                     <!-- profile pic here -->
                 </a>
