--- a/templates/login.html
+++ b/templates/login.html
@@ -1,15 +1,22 @@
+{% from "_macros.html" import render_field with context %}
 <!DOCTYPE html>
 <html>
     <head>
         <title>Login</title>
+        <link rel="icon" href="../static/images/Favicon-32x32.jpeg">
         <link rel="stylesheet" href="../static/login.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body>
-        <div><form action="" method="post">
-            <p><label for="username">Username: </label><input type="text" id="username" name=""></p>
-            <p><label for="password">Password: </label><input type="text" id="password" name=""></p>
-            <button type="submit" formenctype="application/x-www-form-urlencoded">Login</button>
-        </form></div>
+        <div>
+            <form method="POST" id="loginForm" class="container">
+                {{ loginForm.hidden_tag() }}
+    
+                {{ render_field(loginForm.username, autocomplete="username") }}
+                {{ render_field(loginForm.password, autocomplete="current-password") }}
+                {{ render_field(loginForm.remember_me, class_="form-check-input border") }}
+                <button type="submit" class="btn btn-primary mt-2 w-100"> Sign In </button>
+            </form>
+        </div>
     </body>
 </html>
