create post html done

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% from "_macros.html" import render_field with context %}
+
 {% block title %} Home {% endblock %}
 {% block head %} {{ super() }} {% endblock %}
 {% block content %}
