--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% from "_macros.html" import render_field with context %}
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -7,6 +7,7 @@
             <link rel="icon" href="../static/images/Favicon-32x32.jpeg">
             <link rel="stylesheet" href="../static/base.css">
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+            {% block otherScripts %} {% endblock %}
         {% endblock %}
     </head>
     <body>
