lmao i forgot posts need to have titles

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -11,6 +11,7 @@
         {{ uploadForm.hidden_tag() }}
 
         {{ render_field(uploadForm.photos) }}
+        {{ render_field(uploadForm.title) }}
         {{ render_field(uploadForm.rate) }}
         {{ render_field(uploadForm.description) }}
         {{ render_field(uploadForm.tags) }}
