--- a/templates/upload.html
+++ b/templates/upload.html
@@ -16,9 +16,9 @@
         {{ render_field(uploadForm.description) }}
         {{ render_field(uploadForm.tags) }}
 
-        <button type="submit" class="btn btn-primary mt-2 w-100"> Upload </button>
+        <button type="submit" class="btn btn-outline-dark mt-2 w-100"> Upload </button>
     </form>
     {% if success is defined %}
-        <h2>Success!</h3>
+        <h2>Success!</h2>
     {% endif %}
 {% endblock %}
