--- a/templates/home.html
+++ b/templates/home.html
@@ -2,21 +2,28 @@
 {% from "_macros.html" import render_field with context %}
 
 {% block title %} Home {% endblock %}
-{% block otherScripts %} <link rel="stylesheet" href="home.css"> {% endblock %}
+{% block otherScripts %} <link rel="stylesheet" href="../static/home.css"> {% endblock %}
 {% block head %} {{ super() }} {% endblock %}
 {% block content %}
-    <h1>A Favourite Hawker Food Sharing Platform Website </h1>
-    <p> Hello! </p>
+    <h1 id="big-text" class="text-center">Your Favourite Hawker Food Sharing Website</h1>
     {% for content in contents %}
     <div class="d-flex justify-content-center">
-        <div class="card text-center" style="width: 600px;">
-            <a href="{{url_for('post', url_title=content[0].url_title)}}">
-                <img src="../static/images/posts/{{content[1]}}" class="rounded mx-auto d-block" width="400"/>
-            </a>
-            <div class="card-body">
-                <h1>{{content[0].title}}</h1>
+        <a href="{{url_for('post', url_title=content[0].url_title)}}" class="text-decoration-none">
+            <div class="card mb-3" style="max-width: 1000px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="../static/images/posts/{{content[1]}}" class="mx-auto d-block img-fluid rounded-start"/>
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h1 class="card-title">{{content[0].title}}</h1>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                        </div>
+                    </div>
+                </div>  
             </div>
-        </div>
+        </a>  
     </div>
     {% endfor %}
 {% endblock %}
