--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
         </nav>
         <nav class="navbar navbar-expand-lg bg-body-tertiary" id="navbar">
             <div class="container-fluid" id="sub-header">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="{{url_for('surprise')}}">
                     SURPRISE ME
                 </a>
                 <a class="navbar-brand" href="#">
