--- a/templates/home.html
+++ b/templates/home.html
@@ -17,8 +17,7 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h1 class="card-title">{{content[0].title}}</h1>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                            <p class="card-text">{{content[2]}}</p>
                         </div>
                     </div>
                 </div>  
