--- a/templates/post.html
+++ b/templates/post.html
@@ -4,10 +4,37 @@
 {% block head %} {{ super() }} {% endblock %}
 {% block content %}
     <div class="d-flex justify-content-center">
+        <div style="width: 400px;">
+            <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#imageCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                    {% for i in range(1, images|length) %}
+                        <button type="button" data-bs-target="#imageCarousel" data-bs-slide-to="{{i}}" aria-label="Slide {{i+1}}"></button>
+                    {% endfor %}
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="../static/images/posts/{{images[0]}}" class="d-block w-100">
+                    </div>
+                    {% for i in range(1, images|length) %}
+                        <div class="carousel-item">
+                            <img src="../static/images/posts/{{images[i]}}" class="d-block w-100">
+                        </div>
+                    {% endfor %}
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#imageCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#imageCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </div>
+    <div class="d-flex justify-content-center">
         <div class="card" style="width: 100%; padding: 8px;">
-            {% for image in images %}
-                <img src="../static/images/posts/{{image}}" class="rounded mx-auto d-block" width="400"/>
-            {% endfor %}
             <div class="text-center">
                 <h1 class="text-capitalize"> {{post.title}} </h1>
                 <p> Rating: {{post.rating}} </p>
