--- a/static/base.css
+++ b/static/base.css
@@ -11,5 +11,5 @@
 }
 
 body{
-    background-image: url('../static/images/posterboy.png');
+    background-image: url('../static/images/hawker-food-hero-image-image-credit-visit-singapore-1600x900.webp');
 }
