--- a/templates/post.html
+++ b/templates/post.html
@@ -4,7 +4,7 @@
 {% block head %} {{ super() }} {% endblock %}
 {% block content %}
     <div class="d-flex justify-content-center">
-        <div style="width: 400px;">
+        <div style="width: 900px;">
             <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#imageCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -34,7 +34,7 @@
         </div>
     </div>
     <div class="d-flex justify-content-center">
-        <div class="card" style="width: 100%; padding: 8px;">
+        <div class="card" style="width: 900px; padding: 8px;">
             <div class="text-center">
                 <h1 class="text-capitalize"> {{post.title}} </h1>
                 <p> Rating: {{post.rating}} </p>
