login and signup

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,10 +21,15 @@
                 <h2 class="navbar-text">
                     BO JIO AH?
                 </h2>
-                <a class="navbar-brand" href="{{url_for('login')}}">
-                    LOGIN
-                    <!-- profile pic here -->
-                </a>
+                <div>
+                    <a class="navbar-brand" href="{{url_for('login')}}">
+                        LOGIN
+                    </a>
+                    <a class="navbar-brand" href="{{url_for('signup')}}">
+                        SIGN UP
+                        <!-- profile pic here -->
+                    </a>
+                </div>
             </div>
         </nav>
         <nav class="navbar navbar-expand-lg bg-body-tertiary" id="navbar">
