--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
                 {{ render_field(loginForm.username, autocomplete="username") }}
                 {{ render_field(loginForm.password, autocomplete="current-password") }}
                 {{ render_field(loginForm.remember_me, class_="form-check-input border") }}
-                <button type="submit" class="btn btn-primary mt-2 w-100"> Sign In </button>
+                <button type="submit" class="btn btn-outline-dark mt-2 w-100"> Sign In </button>
             </form>
         </div>
     </body>
