--- a/templates/upload.html
+++ b/templates/upload.html
@@ -4,21 +4,25 @@
 {% block title %} Create Post {% endblock %}
 {% block head %} {{ super() }} {% endblock %}
 {% block content %}
-    <div class="text-center">
-        <h1> Create Post </h1>
+    <div class="d-flex justify-content-center">
+        <div class="card w-75" style="padding: 8px;">
+            <div class="text-center">
+                <h1> Create Post </h1>
+            </div>
+            <form method="POST" enctype="multipart/form-data" id="uploadForm" class="container">
+                {{ uploadForm.hidden_tag() }}
+        
+                {{ render_field(uploadForm.photos) }}
+                {{ render_field(uploadForm.title) }}
+                {{ render_field(uploadForm.rate) }}
+                {{ render_field(uploadForm.description) }}
+                {{ render_field(uploadForm.tags) }}
+        
+                <button type="submit" class="btn btn-outline-dark mt-2 w-100"> Upload </button>
+            </form>
+            {% if success is defined %}
+                <h2>Success!</h2>
+            {% endif %}
+        </div>
     </div>
-    <form method="POST" enctype="multipart/form-data" id="uploadForm" class="container">
-        {{ uploadForm.hidden_tag() }}
-
-        {{ render_field(uploadForm.photos) }}
-        {{ render_field(uploadForm.title) }}
-        {{ render_field(uploadForm.rate) }}
-        {{ render_field(uploadForm.description) }}
-        {{ render_field(uploadForm.tags) }}
-
-        <button type="submit" class="btn btn-outline-dark mt-2 w-100"> Upload </button>
-    </form>
-    {% if success is defined %}
-        <h2>Success!</h2>
-    {% endif %}
 {% endblock %}
