search function works better

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
                 <a class="navbar-brand" href="{{url_for('upload')}}">
                     POST
                 </a>
-                <form method="post" class="d-flex" href="{{url_for('root')}}">
+                <form method="post" class="d-flex" action="{{url_for('root')}}">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="item">
                     <button class="btn btn-outline-dark" type="submit" name="search">Go</button>
                 </form>
