filter page done but shit still buggy

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
                 <a class="navbar-brand" href="{{url_for('surprise')}}">
                     SURPRISE ME
                 </a>
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="{{url_for('filter')}}">
                     FILTER
                 </a>
                 <a class="navbar-brand" href="{{url_for('upload')}}">
